# Copyright 2018 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/gcc_toolchain.gni")

gcc_toolchain("mips64-bundled") {
  toolprefix = rebase_path("//tools/mips_toolchain/bin/mips-mti-linux-gnu-",
                           root_build_dir)
  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"

  readelf = "${toolprefix}readelf"
  nm = "${toolprefix}nm"
  ar = "${toolprefix}ar"
  ld = cxx

  # Flag that sets endianness and ABI
  extra_ldflags = "-EB -mabi=64"
  extra_cppflags = "-EB -mabi=64"

  toolchain_args = {
    current_cpu = "mips64"
    current_os = "linux"
    is_clang = false
  }
}

gcc_toolchain("mips64el-bundled") {
  toolprefix = rebase_path("//tools/mips_toolchain/bin/mips-mti-linux-gnu-",
                           root_build_dir)
  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"

  readelf = "${toolprefix}readelf"
  nm = "${toolprefix}nm"
  ar = "${toolprefix}ar"
  ld = cxx

  # Flag that sets endianness and ABI
  extra_ldflags = "-EL -mabi=64"
  extra_cppflags = "-EL -mabi=64"

  toolchain_args = {
    current_cpu = "mips64el"
    current_os = "linux"
    is_clang = false
  }
}

gcc_toolchain("morello-llvm") {
    toolprefix = "/Users/twallis/cheri/output/morello-sdk/bin/"

    cc = "${toolprefix}clang"
    cxx = "${toolprefix}clang++"
    readelf = "${toolprefix}llvm-readelf"
    nm = "${toolprefix}llvm-nm"
    ar = "${toolprefix}llvm-ar"
    ld = cxx

    extra_cflags="--target=aarch64-unknown-freebsd --sysroot /Users/twallis/cheri/output/rootfs-morello-purecap -mabi=purecap -march=morello -Xclang -morello-vararg=new"
    extra_cxxflags="--target=aarch64-unknown-freebsd --sysroot /Users/twallis/cheri/output/rootfs-morello-purecap -mabi=purecap -march=morello -Xclang -morello-vararg=new"
    extra_ldflags="--target=aarch64-unknown-freebsd --sysroot /Users/twallis/cheri/output/rootfs-morello-purecap -mabi=purecap -march=morello -Xclang -morello-vararg=new"

    toolchain_args = {
       v8_generator_toolchain = "//build/toolchain/mac:clang_arm64"
       current_cpu = "arm64"
       current_os = "mac"
       is_clang = true
       use_lld = true
       v8_enable_i18n_support = false
    }
}
